# ReSketch

./: .gitignore  README.md  pyproject.toml
benchmarks/: eval-ablation.yaml  eval.yaml  tiny.yaml
config/: default.yaml
demo/: candidates.yaml  interactive_demo.py
fixtures/: candidates.sqlite  candidates.yaml
report/: resketch-references.bib  resketch-report.tex
resketch/: __init__.py  automata_engine.py  cegis.py  cli.py  config.py  decomposition.py  evaluation.py  models.py  regex_ast.py  regex_engine.py  scoring.py  search.py  sketch.py  synthesis.py
resketch/retrieval/: __init__.py  base.py  db.py  fixture.py  llm.py
scripts/: build_seed_db.py
tests/: conftest.py  test_automata_engine.py  test_cegis.py  test_cli.py  test_config.py  test_decomposition.py  test_demo.py  test_evaluation.py  test_regex_ast.py  test_regex_engine.py  test_retrieval.py  test_search.py  test_sketch.py  test_synthesis.py
